# HackRx-6.0

./: .gitignore  README.md  app.ipynb  pyproject.toml
backend/: Dockerfile  app.ipynb  app.py  config.py  document_processor.py  frontend.html  main.py  pyproject.toml  query_processor.py  rag_system.py  requirements.txt  vector_store_manager.py
frontend/: .gitignore  frontend.html  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: RAGSystemUI.jsx
frontend/src/components/ui/: Card.jsx  Input.jsx  Textarea.jsx
