[project]
name = "backend"
version = "0.1.0"
description = "Modernized RAG System for document parsing, embedding, and semantic search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "pinecone",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-pinecone",
    "llama-parse",
    "pypdf",
    "python-docx",
    "unstructured[docx,pdf]",
    "numpy",
    "transformers",
    "torch",
    "tiktoken",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
